# Editra Plugin: CodeBrowser
# Author: Cody Precord
# License: wxWindows

#-----------------------------------------------------------------------------#

Version 0.4
Released: xx/xx/2008

New:
+Add C Support (Macros, Functions)

Bug Fixes:


#-----------------------------------------------------------------------------#

Version 0.3
Released: 06/15/2008

New:
+ Use Pygments library to aid in parsing
+ Added support for the following filetypes
  - SQL (Packages, Procedures, Functions)
  - PL/SQL (Packages, Procedures, Functions)

Bug Fixes:
+Fixed some string parsing errors in the python parser
+Fix improper parsing of comments in Editra Style Sheets

#-----------------------------------------------------------------------------#

Version 0.2
Released: 04/25/2008

New:
+Added support for the following filetypes
  - Ferite (Namespaces, Classes, Functions, Protocols)
  - haXe (Classes, Class Methods, Class Variables, Functions)
  - MatLab (Functions)
  - Octave (Functions)
  - Scheme (Functions)
  - System Verilog (Classes, Tasks)
  - Verilog (Tasks)

Bug Fixes:
+Notebook syncronization on session load
+Inaccurate parsing of php classes
+Missidentifying statements inside of strings as code in python parser
+Flashing when updating tree on Windows
+CSS comment parsing

#-----------------------------------------------------------------------------#

Version 0.1
Released: 03/14/2008

- Initial Release
  + Support for generating browsing trees for elements of the following languages
    - Ada (Procedure Definitions)
    - Cascading Style Sheets (Global Classes, Global Identities)
    - Configuration Files (ini) (sections, keys)
    - Dos Batch Scripts (Labels)
    - Editra Style Sheets (Style Tags Definitions)
    - Fortran (Programs, Subroutines, Functions)
    - Inno Setup Scripts (Sections, Procedures, Functions, Defines)
    - Lisp (Function Definitions)
    - Lua (Function Definitions)
    - Nullsoft Installer Scripts (Defines, Functions, Sections)