@@ -54,6 +54,7 @@ LOAD_MAP = { synglob.ID_LANG_ADA : TAGLIB + 'adatags',
              synglob.ID_LANG_PLSQL : TAGLIB + 'sqltags',
              synglob.ID_LANG_PROPS : TAGLIB + 'conftags',
              synglob.ID_LANG_PYTHON : TAGLIB + 'pytags',
+             synglob.ID_LANG_RUBY : TAGLIB + 'rubytags',
              synglob.ID_LANG_SCHEME : TAGLIB + 'schemetags',
              synglob.ID_LANG_SQL : TAGLIB + 'sqltags',
              synglob.ID_LANG_TCL : TAGLIB + 'tcltags',
